Added Box Model exercises 1-10

--- a/HTML & CSS/Box Model/Exercises/04_Article/article.html
+++ b/HTML & CSS/Box Model/Exercises/04_Article/article.html
@@ -13,6 +13,14 @@
             Joshua Fields Millburn & Ryan Nicodemus help over 20 million people live meaningful lives with less through their website, books, podcast, and Netflix films. The Minimalists have been featured in the New York Times, Wall Street Journal, Boston Globe,
             Forbes, TIME, ABC, CBS, NBC, FOX, BBC, and NPR.
         </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque neque provident doloribus eum? Dolor fugiat odit laborum doloremque id eligendi blanditiis hic cumque exercitationem esse, non voluptatum nam facere voluptas?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque neque provident doloribus eum? Dolor fugiat odit laborum doloremque id eligendi blanditiis hic cumque exercitationem esse, non voluptatum nam facere voluptas?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque neque provident doloribus eum? Dolor fugiat odit laborum doloremque id eligendi blanditiis hic cumque exercitationem esse, non voluptatum nam facere voluptas?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque neque provident doloribus eum? Dolor fugiat odit laborum doloremque id eligendi blanditiis hic cumque exercitationem esse, non voluptatum nam facere voluptas?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque neque provident doloribus eum? Dolor fugiat odit laborum doloremque id eligendi blanditiis hic cumque exercitationem esse, non voluptatum nam facere voluptas?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque neque provident doloribus eum? Dolor fugiat odit laborum doloremque id eligendi blanditiis hic cumque exercitationem esse, non voluptatum nam facere voluptas?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque neque provident doloribus eum? Dolor fugiat odit laborum doloremque id eligendi blanditiis hic cumque exercitationem esse, non voluptatum nam facere voluptas?</p>
+
     </main>
 </body>
 
